data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1248.wast
;; 9. **Test Description:**    - Export a function utilizing diverse control flow constructs (`block`, `loop`, `if`) with strategically placed `br` instructions.    - Import and invoke this function, checking if the transitions handle stack and label indexing correctly.    - **Constraint:** Broadly test mixed control flow handling, particularly how branches interact when moved across module boundaries.

(assert_invalid
  (module
    (func $mixed-control-flow
      (export "testFunction")
      (block
        (loop
          (i32.const 1)
          (br_if 1 (i32.const 0)) ;; conditionally branch to the block
          (if (i32.const 1)
            (then (br 2)) ;; branch out of the loop and block
            (else (block (br 2) (br 0))) ;; branch out to the outer block or loop start
          )
        )
      )
    )
  )
  "type mismatch"
)